--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -2,7 +2,7 @@
 ---
 # This workflow integrates ShiftLeft NG SAST with GitHub
 # Visit https://docs.shiftleft.io for help
-name: ShiftLef
+name: Qwiet
 
 on:
   pull_request:
