--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -48,9 +48,9 @@ jobs:
         ${GITHUB_WORKSPACE}/sl check-analysis --app qwiet-ruby-demo \
            --branch '${{ github.event.pull_request.base.ref }}' \
            --target 'tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}' \
-           --github-pr-number=${{github.event.number}} \
-           --github-pr-user=${{ github.repository_owner }} \
-           --github-pr-repo=${{ github.event.repository.name }} \
+#           --github-pr-number=${{github.event.number}} \
+#           --github-pr-user=${{ github.repository_owner }} \
+#           --github-pr-repo=${{ github.event.repository.name }} \
            --github-token=${{ secrets.GITHUB_TOKEN }}
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
