--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -45,7 +45,7 @@ jobs:
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
     - name: Validate Build Rules
       run: |
-        ${GITHUB_WORKSPACE}/sl check-analysis --app qwiet-ruby-demo \
+        ${GITHUB_WORKSPACE}/sl check-analysis --app GH-Qwiet-ruby-demo \
            --branch '${{ github.event.pull_request.base.ref }}' \
            --target 'tag.branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}' \
            --github-pr-number=${{github.event.number}} \
