--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -40,27 +40,27 @@ jobs:
   ##############################################
   # Check for violations for each language
   ##############################################
-  Build-Rules:
-    runs-on: ubuntu-latest
-    needs: [Qwiet-Source-Analysis, Java-Analysis]
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ruby, js]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Download Qwiet CLI
-      run: |
-        curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-    - name: Validate Build Rules per app
-      if: ${{ github.event_name == 'pull_request' }}
-      run: ${GITHUB_WORKSPACE}/sl check-analysis --v2 --config shiftleft.yml --app app-${{ matrix.language }} \
-            --branch "${{ github.head_ref || steps.extract_branch.outputs.branch }}" --report \
-            --github-pr-number=${{github.event.number}} --github-pr-user=${{ github.repository_owner }} \
-            --github-pr-repo=${{ github.event.repository.name }}  --github-token=${{ secrets.GITHUB_TOKEN }}
-      env:
-        SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
+  #Build-Rules:
+  #  runs-on: ubuntu-latest
+  #  needs: Qwiet-Source-Analysis
+  #  strategy:
+  #    fail-fast: false
+  #    matrix:
+  #      language: [ruby, js]
+  #  steps:
+  #  - uses: actions/checkout@v2
+  #  - name: Download Qwiet CLI
+  #    run: |
+  #      curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
+  #  - name: Extract branch name
+  #    shell: bash
+  #    run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+  #    id: extract_branch
+  #  - name: Validate Build Rules per app
+  #    if: ${{ github.event_name == 'pull_request' }}
+  #    run: ${GITHUB_WORKSPACE}/sl check-analysis --v2 --config shiftleft.yml --app app-${{ matrix.language }} \
+  #          --branch "${{ github.head_ref || steps.extract_branch.outputs.branch }}" --report \
+  #          --github-pr-number=${{github.event.number}} --github-pr-user=${{ github.repository_owner }} \
+  #          --github-pr-repo=${{ github.event.repository.name }}  --github-token=${{ secrets.GITHUB_TOKEN }}
+  #    env:
+  #      SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
